--- a/prototype/index.html
+++ b/prototype/index.html
@@ -1,7 +1,7 @@
-
 <html>
   <head>
-    <link href="/stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  	<title>Add to CheckDesk</title>
+    <link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
   </head>
   
 <body>
@@ -70,7 +70,7 @@
       </div><!-- /.main -->
           
         <div class="submit">
-          <div class"multilevel">
+          <div class="multilevel">
             <button type="submit" class="add">Add</button>
             <button type="submit" class="discuss">+ Discuss</button>
           </div>
