starting to use Bootstrap

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -5,8 +5,9 @@
   </head>
   
 <body>
-  <div id="add" class="container">
-    <a href="#" class="close">close</a>
+<div class="modal">
+  <a href="#" class="close">close</a>
+  <div id="add" class="active">
     
     <header>
       <h1>Add to Checkdesk</h1>
@@ -76,8 +77,7 @@
     </form>
   </div><!-- /#add -->
   
-  <div id="discuss" class="container">
-    <a href="#" class="close">close</a>
+  <div id="discuss" class="hide">
     
     <header>
       <h1>Added! Now Share!</h1>
@@ -144,5 +144,6 @@
       </div>
     </form>
   </div><!-- /#discuss -->
+</div> <!-- .modal -->
 </body>
 </html>
