--- a/prototype/index.html
+++ b/prototype/index.html
@@ -70,7 +70,7 @@
         <div class="submit">
           <div class="btn-group multilevel">
             <button type="submit" class="btn btn-primary add">Add</button>
-            <button type="submit" class="btn btn-info discuss">+ Discuss</button>
+            <button type="submit" class="btn btn-info discuss">&amp;&nbsp;&nbsp;&nbsp;Discuss</button>
           </div>
       </div>
     </form>
