few more touches

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -139,9 +139,8 @@
 	    </div><!-- .main -->
           
       <div class="submit">
-        <span class="uneditable-input shorturl">http://cd.sk/1234</span>
-        <button type="submit" class="share">Share</button>
-        <a href="#" class="btn minor cancel">Cancel</a>
+        <code class="shorturl">http://cd.sk/1234</code>
+        <button type="submit" class="btn btn-primary share">Share</button>
       </div>
     </form>
   </div><!-- /#discuss -->
